--- a/index.html
+++ b/index.html
@@ -3,7 +3,124 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Beauty zone</title>
+    <title lang="en">Beauty zone</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <a href="#">
+          <img src="./images/logo.svg" alt="Логотип" />
+        </a>
+        <ul>
+          <li><a href="#">Про нас</a></li>
+          <li><a href="#">Чому ми</a></li>
+          <li><a href="#">Наші процедури</a></li>
+          <li><a href="#">Контакти</a></li>
+          <li>
+            <a href="#"
+              ><img
+                src="./images/telephone-receiver_icon-icons.com_56033 1.svg"
+                alt="phone-call"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./images/uit_facebook-f.svg" alt="facebook"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./images/ph_instagram-logo-light.svg" alt="instagram"
+            /></a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <section>
+        <p>Косметологічна клініка</p>
+        <h1 lang="en">beauty zone</h1>
+        <button type="button">Замовити дзвінок</button>
+        <p>Запишись та отримай безкоштовну консультацію нашого косметолога</p>
+      </section>
+      <section>
+        <h2>Перевтілюйтесь в beauty zone!</h2>
+        <p>
+          Наша косметологічна клініка пропонує вам професійні послуги з догляду
+          за шкірою обличчя та тіла.
+        </p>
+        <p>
+          B beauty zone ми гарантуємо найвищі стандарти якості та приємний
+          сервіс. Наші косметологічні процедури та препарати допоможуть вам
+          підтримувати свою красу та молодість. З нами краса назавжди!
+        </p>
+      </section>
+      <section>
+        <h2>Чому люди обирають нас</h2>
+        <ul>
+          <li>
+            <article>
+              <h3>
+                <img
+                  src="./images/game-icons_materials-science.svg"
+                  alt="science"
+                />
+              </h3>
+              <p>
+                Всі наші косметологи мають вищу медичну освіту та стаж роботи
+                від 5 років
+              </p>
+            </article>
+          </li>
+          <li>
+            <article>
+              <h3>
+                <img
+                  src="./images/medicinecosmeticsbottletreatment_109776 1.svg"
+                  alt="cosmetik"
+                />
+              </h3>
+              <p>
+                Використовуємо тільки професійне обладнання та косметику,
+                перевірену часом
+              </p>
+            </article>
+          </li>
+          <li>
+            <article>
+              <h3><img src="./images/ph_crown-light.svg" alt="crown" /></h3>
+              <p>
+                Наша мета - підкреслити переваги та приховати недоліки, а не
+                переробити
+              </p>
+            </article>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Наші процедури</h2>
+        <ul>
+          <li>
+            <articles>
+              <img src="./images/procedures-mask.jpg" alt="Маскі" />
+            </articles>
+          </li>
+          <li>
+            <articles>
+              <img src="./images/injections..jpg" alt="Уколи" />
+            </articles>
+          </li>
+          <li>
+            <articles>
+              <img src="./images/pilling.jpg" alt="Пілінг" />
+            </articles>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Як нас знайти</h2>
+      </section>
+    </main>
+  </body>
 </html>
