--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
           <li><a href="#">Контакти</a></li>
           <li>
             <a href="#"
-              ><img
-                src="./images/telephone-receiver_icon-icons.com_56033 1.svg"
-                alt="phone-call"
+              ><img src="./images/telephone-receiver_icon.svg" alt="phone-call"
             /></a>
           </li>
           <li>
@@ -77,7 +75,7 @@
             <article>
               <h3>
                 <img
-                  src="./images/medicinecosmeticsbottletreatment_109776 1.svg"
+                  src="./images/medicinecosmeticsbottletreatment.svg"
                   alt="cosmetik"
                 />
               </h3>
@@ -102,25 +100,74 @@
         <h2>Наші процедури</h2>
         <ul>
           <li>
-            <articles>
-              <img src="./images/procedures-mask.jpg" alt="Маскі" />
-            </articles>
+            <img src="./images/procedures-mask.jpg" alt="Маскі" />
           </li>
           <li>
-            <articles>
-              <img src="./images/injections..jpg" alt="Уколи" />
-            </articles>
+            <img src="./images/injections..jpg" alt="Уколи" />
           </li>
           <li>
-            <articles>
-              <img src="./images/pilling.jpg" alt="Пілінг" />
-            </articles>
+            <img src="./images/pilling.jpg" alt="Пілінг" />
           </li>
         </ul>
       </section>
       <section>
         <h2>Як нас знайти</h2>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2537.4764795969304!2d30.770364688537402!3d50.506700598383496!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4d97de411b701%3A0x48116b28f7f00d94!2z0YPQuy4g0KLQsNGA0LDRgdCwINCo0LXQstGH0LXQvdC60L4sIDUsINCR0YDQvtCy0LDRgNGLLCDQmtC40LXQstGB0LrQsNGPINC-0LHQu9Cw0YHRgtGMLCDQo9C60YDQsNC40L3QsCwgMDc0MDA!5e0!3m2!1sru!2spl!4v1705005095342!5m2!1sru!2spl"
+          width="605"
+          height="481"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
       </section>
     </main>
+
+    <footer>
+      <nav>
+        <a href="#">
+          <img src="./images/logo.svg" alt="Логотип" />
+        </a>
+        <ul>
+          <li><a href="#">Про нас</a></li>
+          <li><a href="#">Чому ми</a></li>
+          <li><a href="#">Наші процедури</a></li>
+          <li><a href="#">Контакти</a></li>
+        </ul>
+      </nav>
+      <address>
+        <ul>
+          <li><a href="tel:+380960000007">+ 38 (096) 000 00 07</a></li>
+          <li>
+            <a href="mailto:beautyzone@gmail.com">beautyzone@gmail.com</a>
+          </li>
+          <li>
+            <a href="https://maps.app.goo.gl/9T2UQ1c2zL4S4gaU7" target="_blank"
+              >Україна, м. Київ, вул. Тараса Шевченка 5</a
+            >
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./images/telephone-receiver_icon.svg" alt="phone-call"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./images/uit_facebook-f.svg" alt="facebook"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./images/ph_instagram-logo-light.svg" alt="instagram"
+            /></a>
+          </li>
+        </ul>
+        <a class="adress-link" href="#" target="_blank">
+          Політика конфіденційності</a
+        >
+        <p class="copyright">&copy; 2022 Дані захищені</p>
+      </address>
+    </footer>
   </body>
 </html>
