--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title lang="en">Beauty zone</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
@@ -12,10 +13,10 @@
           <img src="./images/logo.svg" alt="Логотип" />
         </a>
         <ul>
-          <li><a href="#">Про нас</a></li>
-          <li><a href="#">Чому ми</a></li>
-          <li><a href="#">Наші процедури</a></li>
-          <li><a href="#">Контакти</a></li>
+          <li><a class="link" href="#">Про нас</a></li>
+          <li><a class="link" href="#">Чому ми</a></li>
+          <li><a class="link" href="#">Наші процедури</a></li>
+          <li><a class="link" href="#">Контакти</a></li>
           <li>
             <a href="#"
               ><img src="./images/telephone-receiver_icon.svg" alt="phone-call"
@@ -38,24 +39,31 @@
     <main>
       <section>
         <p>Косметологічна клініка</p>
-        <h1 lang="en">beauty zone</h1>
-        <button type="button">Замовити дзвінок</button>
-        <p>Запишись та отримай безкоштовну консультацію нашого косметолога</p>
-      </section>
-      <section>
-        <h2>Перевтілюйтесь в beauty zone!</h2>
-        <p>
-          Наша косметологічна клініка пропонує вам професійні послуги з догляду
-          за шкірою обличчя та тіла.
-        </p>
-        <p>
-          B beauty zone ми гарантуємо найвищі стандарти якості та приємний
-          сервіс. Наші косметологічні процедури та препарати допоможуть вам
-          підтримувати свою красу та молодість. З нами краса назавжди!
+        <h1 lang="en" class="main-title">beauty zone</h1>
+        <button class="main-button" type="button">Замовити дзвінок</button>
+        <p class="main-text">
+          Запишись та отримай безкоштовну консультацію нашого косметолога
         </p>
       </section>
       <section>
-        <h2>Чому люди обирають нас</h2>
+        <h2 class="section-title">
+          Перевтілюйтесь в <span class="title-beauty">beauty zone!</span>
+        </h2>
+        <div class="publicity-text">
+          <p>
+            Наша косметологічна клініка пропонує вам професійні послуги з
+            догляду за шкірою обличчя та тіла.
+          </p>
+          <p>
+            B <span class="text-beauty">beauty zone</span> ми гарантуємо найвищі
+            стандарти якості та приємний сервіс. Наші косметологічні процедури
+            та препарати допоможуть вам підтримувати свою красу та молодість. З
+            нами краса назавжди!
+          </p>
+        </div>
+      </section>
+      <section>
+        <h2 class="section-title">Чому люди обирають нас</h2>
         <ul>
           <li>
             <article>
@@ -97,7 +105,7 @@
         </ul>
       </section>
       <section>
-        <h2>Наші процедури</h2>
+        <h2 class="section-title">Наші процедури</h2>
         <ul>
           <li>
             <img src="./images/procedures-mask.jpg" alt="Маскі" />
@@ -111,7 +119,7 @@
         </ul>
       </section>
       <section>
-        <h2>Як нас знайти</h2>
+        <h2 class="section-title">Як нас знайти</h2>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2537.4764795969304!2d30.770364688537402!3d50.506700598383496!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4d97de411b701%3A0x48116b28f7f00d94!2z0YPQuy4g0KLQsNGA0LDRgdCwINCo0LXQstGH0LXQvdC60L4sIDUsINCR0YDQvtCy0LDRgNGLLCDQmtC40LXQstGB0LrQsNGPINC-0LHQu9Cw0YHRgtGMLCDQo9C60YDQsNC40L3QsCwgMDc0MDA!5e0!3m2!1sru!2spl!4v1705005095342!5m2!1sru!2spl"
           width="605"
